2006-06-12  Stipe Tolj  <stolj at kannel.org>
  * doc/userguide/userguide.xml: adding a paragraph descibing the new 
    line wrap delimiter '\' (backslash).
  * gwlib/cfg.c: adding support for a line wrapping delimiter '\' to
    allow multiple lines for a single config directive.
    Alex suggested this via a patch to the list.
    [Msg-Id: <e5s5du$dbv$1@sea.gmane.org>]

2006-06-11  Stipe Tolj  <stolj at kannel.org>
  * wap/wtp_init.c: fixing bug #350, typo which may cause a segfault.
    Thanks to <hewei.com@gmail.com> for bug report and patch.

2006-06-06  Alexander Malysh <amalysh at kannel.org>
  * configure, configure.in: fixed net/if.h detection on Mac OSX.

2006-06-03  Alexander Malysh <amalysh at kannel.org>
  * gwlib/xmlrpc.c: various fixes:
    - write <string></string> tags for empty string
    - extra chars in string should be replaced with http entities
    - don't panic if i in xmlrpc_get_param bigger as count of method call
      params

2006-06-03  Alexander Malysh <amalysh at kannel.org>
  * configure, configure.in: switched to autoconf 2.5 and added check
    for large file support.

2006-06-01  Stipe Tolj  <stolj at kannel.org>
  * gw/smsc/smsc_smpp.c: fixing bug #345, causing long overflow on 32 bit
    systems while processing message id values from submit_sm_resp PDU that
    are in hex representation.
    Thanks a lot to Ady Wicalsono <ady.wicaksono@infokom.net> for report 
    and provided solution via patch in bug database.
    [Msg-Id: <446C4175.6090802@infokom.net>]
    
2006-06-01  Stipe Tolj  <stolj at kannel.org>
  * gw/smsc/smsc_smpp.c: adding possible alternative for DLR message
    state string for state 'buffered'.
    Thanks to Tom Sommer <mail@tomsommer.dk> for providing a patch.
    [Msg-Id: <20558.62.242.67.218.1148906304.squirrel@webmail.dreamcoder.dk>]

2006-05-23  Alexander Malysh <amalysh at kannel.org>
  * gwlib/gwthread-pthread.c: don't panic if new thread could not be started.